--- a/index.html
+++ b/index.html
@@ -14,7 +14,31 @@
 </head>
 
 <body>
-    <h1>Hello Biker</h1>
+    <header>
+        <nav>
+            <div class="navbar bg-base-100 shadow-sm">
+                <div class="navbar-start">
+
+                    <a class="btn btn-ghost text-xl">Bike Dekho</a>
+                </div>
+                <div class="navbar-center  lg:flex navbar-end">
+                    <ul class="menu menu-horizontal px-1">
+                        <li><a>Home</a></li>
+                        <li><a>Shope</a></li>
+                        <li><a>News</a></li>
+                        <li><a>Contact</a></li>
+                    </ul>
+                    <a class="btn btn-error">Login</a>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
