--- a/index.html
+++ b/index.html
@@ -10,30 +10,42 @@
     <!-- Dasey UI -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                        'bike-primary-btn': '#E76F51',
+                    }
+                }
+            }
+        }
+    </script>
 </head>
 </head>
 
 <body>
-    <header>
+    <header class="md:container mx-auto">
         <nav>
             <div class="navbar bg-base-100 shadow-sm">
-                <div class="navbar-start">
+                <div class="flex-1">
 
-                    <a class="btn btn-ghost text-xl">Bike Dekho</a>
+                    <a class="font-bold text-xl">Bike Dekho</a>
                 </div>
-                <div class="navbar-center  lg:flex navbar-end">
+                <div class="navbar-center  lg:flex ">
                     <ul class="menu menu-horizontal px-1">
                         <li><a>Home</a></li>
                         <li><a>Shope</a></li>
                         <li><a>News</a></li>
                         <li><a>Contact</a></li>
                     </ul>
-                    <a class="btn btn-error">Login</a>
+                    <a class="btn bg-[#E76F51] text-white">Login</a>
                 </div>
             </div>
         </nav>
     </header>
-    <main>
+    <main class="md:container mx-auto">
 
     </main>
     <footer>
