--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     colors: {
                         clifford: '#da373d',
                         'bike-primary-btn': '#E76F51',
+                        'bike-header-bg': '#E76F51',
                     }
                 }
             }
@@ -26,7 +27,7 @@
 </head>
 
 <body>
-    <header class="md:container mx-auto">
+    <header class="md:container mx-auto ">
         <nav>
             <div class="navbar bg-base-100 shadow-sm">
                 <div class="flex-1">
@@ -45,23 +46,74 @@
             </div>
         </nav>
         <!-- Hero Section with carousal -->
-        <div class="carousel w-full">
-            <div id="slide1" class="carousel-item relative w-full">
-                <img src="https://img.daisyui.com/images/stock/photo-1625726411847-8cbb60cc71e6.webp" class="w-full" />
+        <div class="carousel w-full bg-[#E76F51]/20 ">
+            <!-- slide 1  -->
+            <div id="slide1" class="carousel-item relative w-full p-12 lg:p-24 ">
+                <!-- bannger flex  -->
+                <div class="flex flex-col lg:flex-row">
+                    <!-- text -->
+                    <div class="space-y-6 flex-1">
+                        <h1 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+                        <p class="text-sm font-light text-gray-500">Amet minim mollit non deserunt ullamco
+
+                            est sit aliqua dolor do amet sint. <br>Velit officia consequat duis enim velit mollit.</p>
+                        <button>
+                            <a class="btn bg-[#E76F51] text-white">Purchase</a>
+                        </button>
+                    </div>
+                    <!-- image -->
+                    <div class="flex-1">
+                        <img src="images/slider/bike1.png" class="w-full" />
+                    </div>
+                </div>
                 <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
                     <a href="#slide3" class="btn btn-circle">❮</a>
                     <a href="#slide2" class="btn btn-circle">❯</a>
                 </div>
             </div>
-            <div id="slide2" class="carousel-item relative w-full">
-                <img src="https://img.daisyui.com/images/stock/photo-1609621838510-5ad474b7d25d.webp" class="w-full" />
+            <!-- slide 2  -->
+            <div id="slide2" class="carousel-item relative w-full p-12 lg:p-24 ">
+                <!-- bannger flex  -->
+                <div class="flex flex-col lg:flex-row">
+                    <!-- text -->
+                    <div class="space-y-6 flex-1">
+                        <h1 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+                        <p class="text-sm font-light text-gray-500">Amet minim mollit non deserunt ullamco
+
+                            est sit aliqua dolor do amet sint. <br>Velit officia consequat duis enim velit mollit.</p>
+                        <button>
+                            <a class="btn bg-[#E76F51] text-white">Purchase</a>
+                        </button>
+                    </div>
+                    <!-- image -->
+                    <div class="flex-1">
+                        <img src="images/slider/bike2.png" class="w-full" />
+                    </div>
+                </div>
                 <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
                     <a href="#slide1" class="btn btn-circle">❮</a>
                     <a href="#slide3" class="btn btn-circle">❯</a>
                 </div>
             </div>
-            <div id="slide3" class="carousel-item relative w-full">
-                <img src="https://img.daisyui.com/images/stock/photo-1414694762283-acccc27bca85.webp" class="w-full" />
+            <!-- slide 3  -->
+            <div id="slide3" class="carousel-item relative w-full p-12 lg:p-24 ">
+                <!-- bannger flex  -->
+                <div class="flex flex-col lg:flex-row">
+                    <!-- text -->
+                    <div class="space-y-6 flex-1">
+                        <h1 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+                        <p class="text-sm font-light text-gray-500">Amet minim mollit non deserunt ullamco
+
+                            est sit aliqua dolor do amet sint. <br>Velit officia consequat duis enim velit mollit.</p>
+                        <button>
+                            <a class="btn bg-[#E76F51] text-white">Purchase</a>
+                        </button>
+                    </div>
+                    <!-- image -->
+                    <div class="flex-1">
+                        <img src="images/slider/bike3.png" class="w-full" />
+                    </div>
+                </div>
                 <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
                     <a href="#slide2" class="btn btn-circle">❮</a>
                     <a href="#slide1" class="btn btn-circle">❯</a>
