Featured in this year

--- a/index.html
+++ b/index.html
@@ -122,7 +122,16 @@
         </div>
     </header>
     <main class="md:container mx-auto">
-
+        <section class="mt-10 mb-10">
+            <h1 class="font-semibold text-5xl text-center">Featured Bikes In This Year </h1>
+            <p class="text-center font-semibold text-sm border-b-2 p-1">Best Bike Collection</p>
+            <!-- container div  -->
+            <div class="mt-10 flex flex-col lg:flex-row lg:justify-around gap-4">
+                <img src="images/others/feature-bike.png" alt="">
+                <img src="images/others/feature-bike.png" alt="">
+                <img src="images/others/feature-bike.png" alt="">
+            </div>
+        </section>
     </main>
     <footer>
 
