leatest bike added

--- a/index.html
+++ b/index.html
@@ -125,11 +125,75 @@
         <section class="mt-10 mb-10">
             <h1 class="font-semibold text-5xl text-center">Featured Bikes In This Year </h1>
             <p class="text-center font-semibold text-sm border-b-2 p-1">Best Bike Collection</p>
-            <!-- container div  -->
-            <div class="mt-10 flex flex-col lg:flex-row lg:justify-around gap-4">
-                <img src="images/others/feature-bike.png" alt="">
-                <img src="images/others/feature-bike.png" alt="">
-                <img src="images/others/feature-bike.png" alt="">
+            <!-- featured bike -->
+            <div class="mt-10 items-center flex flex-col lg:flex-row lg:justify-around gap-4">
+                <img class="w-96" src="images/others/feature-bike.png" alt="">
+                <img class="w-96" src="images/others/feature-bike.png" alt="">
+                <img class="w-96" src="images/others/feature-bike.png" alt="">
+            </div>
+        </section>
+        <!-- Leatest Bike -->
+        <section>
+            <h2 class="text-center font-bold text-5xl mb-10">Latest Bike</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12">
+                <!-- card 1 -->
+                <div class="card bg-base-100 shadow-sm">
+                    <figure>
+                        <img src="images/others/latest1.png" alt="Latest Bike 1" />
+                    </figure>
+                    <div class="card-body space-y-2">
+                        <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at. </p>
+                        <div class="card-actions ">
+                            <button class="btn bg-[#E76F51] text-white">Read More</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- card 2 -->
+                <div class="card bg-base-100 shadow-sm">
+                    <figure>
+                        <img src="images/others/latest2.png" alt="Latest Bike 2" />
+                    </figure>
+                    <div class="card-body space-y-2">
+                        <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at. </p>
+                        <div class="card-actions ">
+                            <button class="btn bg-[#E76F51] text-white">Read More</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- card 3 -->
+                <div class="card bg-base-100 shadow-sm">
+                    <figure>
+                        <img src="images/others/latest3.png" alt="Latest Bike 3" />
+                    </figure>
+                    <div class="card-body space-y-2">
+                        <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at. </p>
+                        <div class="card-actions ">
+                            <button class="btn bg-[#E76F51] text-white">Read More</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="mt-10">
+            <div class="card bg-base-100 w-96 shadow-sm">
+                <div class="avatar">
+                    <div class="w-24 rounded-full">
+                        <img src="images/others/user-1.png" />
+                    </div>
+                </div>
+                <div class="card-body items-center text-center">
+                    <p>Slate helps you see how
+                        many more days you need
+                        to work to reach your financial
+                        goal for the month and year.</p>
+                    
+                </div>
             </div>
         </section>
     </main>
