--- a/index.html
+++ b/index.html
@@ -180,19 +180,95 @@
                 </div>
             </div>
         </section>
-        <section class="mt-10">
-            <div class="card bg-base-100 w-96 shadow-sm">
-                <div class="avatar">
-                    <div class="w-24 rounded-full">
-                        <img src="images/others/user-1.png" />
+        <section class="mt-10 mb-10">
+            <!-- client container  -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12 items-center">
+                <!-- client card 1 -->
+                <div class="card bg-base-100 w-96 shadow-sm items-center space-y-4">
+                    <div class="avatar">
+                        <div class="w-24 rounded-full mx-auto">
+                            <img src="images/others/user-1.png" />
+                        </div>
                     </div>
+                    <div class="card-body items-center text-center">
+                        <p>Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.</p>
+
+                    </div>
+                    <div class="rating">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                            aria-label="1 star" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                            aria-label="2 star" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                            aria-label="3 star" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" aria-label="4 star"
+                            checked="checked" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                            aria-label="5 star" />
+                    </div>
+                    <p class="font-semibold text-sm">Regina Miles</p>
+                    <p class="font-semibold text-sm">Banker</p>
                 </div>
-                <div class="card-body items-center text-center">
-                    <p>Slate helps you see how
-                        many more days you need
-                        to work to reach your financial
-                        goal for the month and year.</p>
-                    
+                <!-- client card 2 -->
+                <div class="card bg-base-100 w-96 shadow-sm items-center space-y-4">
+                    <div class="avatar">
+                        <div class="w-24 rounded-full mx-auto">
+                            <img src="images/others/user-2.png" />
+                        </div>
+                    </div>
+                    <div class="card-body items-center text-center">
+                        <p>Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.</p>
+
+                    </div>
+                    <div class="rating">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                            aria-label="1 star" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                            aria-label="2 star" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                            aria-label="3 star" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" aria-label="4 star"
+                            checked="checked" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                            aria-label="5 star" />
+                    </div>
+                    <p class="font-semibold text-sm">Regina Miles</p>
+                    <p class="font-semibold text-sm">Banker</p>
+                </div>
+                <!-- client card 3 -->
+                <div class="card bg-base-100 w-96 shadow-sm items-center space-y-4">
+                    <div class="avatar">
+                        <div class="w-24 rounded-full mx-auto">
+                            <img src="images/others/user-3.png" />
+                        </div>
+                    </div>
+                    <div class="card-body items-center text-center">
+                        <p>Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.</p>
+
+                    </div>
+                    <div class="rating">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                            aria-label="1 star" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                            aria-label="2 star" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                            aria-label="3 star" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" aria-label="4 star"
+                            checked="checked" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                            aria-label="5 star" />
+                    </div>
+                    <p class="font-semibold text-sm">Regina Miles</p>
+                    <p class="font-semibold text-sm">Banker</p>
                 </div>
             </div>
         </section>
