--- a/index.html
+++ b/index.html
@@ -180,7 +180,10 @@
                 </div>
             </div>
         </section>
+        <!-- client section  -->
         <section class="mt-10 mb-10">
+            <h1 class="text-center font-semibold text-5xl mb-5">Happy <span class="text-[#E76F51]">Clients says</span>
+            </h1>
             <!-- client container  -->
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12 items-center">
                 <!-- client card 1 -->
@@ -269,6 +272,54 @@
                     </div>
                     <p class="font-semibold text-sm">Regina Miles</p>
                     <p class="font-semibold text-sm">Banker</p>
+                </div>
+            </div>
+        </section>
+        <!-- asked question section -->
+        <section>
+            <h1 class="text-center font-semibold text-5xl mb-5">Frequently <span class="text-[#E76F51]">Asked
+                    Questions</span></h1>
+            <div class="hero">
+                <div class="hero-content flex-col lg:flex-row">
+                    <img src="images/others/faq.png" class="w-full rounded-lg shadow-2xl" />
+
+                    <!-- Acordion -->
+                    <div class="space-y-4">
+                        <div class="collapse collapse-arrow bg-base-100 border border-blue-100">
+                            <input type="radio" name="my-accordion-2" checked="checked" />
+                            <div class="collapse-title font-semibold">What are the most important things I should
+                                know about riding a bike?</div>
+                            <div class="collapse-content text-sm">Safety First! Always obey the rules of the road. Obey
+                                all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just
+                                “riding” your bike. This will help you be a more focused and legally compliant bike
+                                rider. </div>
+                        </div>
+                        <div class="collapse collapse-arrow bg-base-100 border border-blue-100">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title font-semibold">How can I tell if my helmet is old and I need a
+                                new one?</div>
+                            <div class="collapse-content text-sm">Obey
+                                all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just
+                                “riding” your bike.</div>
+                        </div>
+                        <div class="collapse collapse-arrow bg-base-100 border border-blue-100">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title font-semibold">My bike has been in storage is it safe to ride?
+                            </div>
+                            <div class="collapse-content text-sm">Obey
+                                all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just
+                                “riding” your bike.</div>
+                        </div>
+                        <div class="collapse collapse-arrow bg-base-100 border border-blue-100">
+                            <input type="radio" name="my-accordion-2" checked="checked" />
+                            <div class="collapse-title font-semibold">What are the most important things I should
+                                know about riding a bike?</div>
+                            <div class="collapse-content text-sm">Safety First! Always obey the rules of the road. Obey
+                                all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just
+                                “riding” your bike. This will help you be a more focused and legally compliant bike
+                                rider. </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
