--- a/index.html
+++ b/index.html
@@ -324,8 +324,25 @@
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="footer sm:footer-horizontal bg-neutral text-neutral-content items-center p-10">
+        <aside>
+            <p>
+                ACME Industries Ltd.
+                <br />
+                Providing reliable tech since 1992
+            </p>
+        </aside>
+        <nav>
+            <h6 class="footer-title">Social</h6>
+            <div class="grid grid-cols-1 gap-4">
+                <a>
+                    <img class="w-36" src="images/others/android.png" alt="">
+                </a>
+                <a>
+                    <img class="w-36" src="images/others/ios.png" alt="">
+                </a>
+            </div>
+        </nav>
     </footer>
 </body>
 
